--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       const BAND_TINTS = ["#fecaca","#fed7aa","#fde68a","#bbf7d0","#bae6fd","#c7d2fe","#ddd6fe"];
 
-      // z-cutpoints matching your original 15-SD boundaries (69/79/89/109/119/129)
+      // z-cutpoints matching original 15-SD boundaries (69/79/89/109/119/129)
       const Z_CUTS = [-2, -1.3333333333, -0.6666666667, 0.6666666667, 1.3333333333, 2];
 
       const CLUSTER_PALETTE = [
@@ -99,7 +99,7 @@
         const [clusterColors, setClusterColors] = useState({});
         const [clusterOrder, setClusterOrder] = useState([]);
 
-        // SD-dependent bands (so labels/categories change when SD toggles)
+        // SD-dependent bands (so categories change when SD toggles)
         const RANGE_BANDS = useMemo(() => {
           const labels = BAND_LABELS[lang] || BAND_LABELS.en;
           const cuts = Z_CUTS.map(z => mean + z * axisSd);
@@ -117,6 +117,16 @@
         function bandFor(std100) {
           const b = RANGE_BANDS.find(bb => std100 >= bb.min && std100 <= bb.max);
           return b ? b.label : "";
+        }
+
+        // ✅ Overlap fix for top labels
+        function labelVisibility(idx) {
+          // always show Average (index 3)
+          if (idx === 3) return true;
+          // narrow bands at SD=10: show every other label
+          if (axisSd === 10) return idx % 2 === 0;
+          // SD=15: show all
+          return true;
         }
 
         // Shift curve right / prevent left labels clipping
@@ -154,7 +164,7 @@
           return { key, color: nextColor };
         }
 
-        // ✅ NEW: recompute std100 live based on current axisSd
+        // recompute std100 live based on current axisSd
         const displayItems = useMemo(() => {
           return items.map(it => ({
             ...it,
@@ -324,11 +334,13 @@
                   <div className="flex items-center justify-between mb-3">
                     <span className="font-medium">Axis standard deviation</span>
                     <div className="flex items-center gap-2">
-                      <button type="button"
+                      <button
+                        type="button"
                         className={`px-3 py-1 rounded-full border ${axisSd===15?"bg-slate-900 text-white":"bg-white"}`}
                         onClick={() => setAxisSd(15)}
                       >15</button>
-                      <button type="button"
+                      <button
+                        type="button"
                         className={`px-3 py-1 rounded-full border ${axisSd===10?"bg-slate-900 text-white":"bg-white"}`}
                         onClick={() => setAxisSd(10)}
                       >10</button>
@@ -337,30 +349,48 @@
 
                   <div className="flex items-center justify-between mt-4">
                     <label className="text-sm">Curve Color</label>
-                    <input type="color" value={curveColor}
+                    <input
+                      type="color"
+                      value={curveColor}
                       onChange={(e)=>setCurveColor(e.target.value)}
                       className="w-10 h-8 rounded-md border cursor-pointer"
                     />
                   </div>
 
                   <label className="mt-3 flex items-center gap-2 text-sm">
-                    <input type="checkbox" checked={showBands} onChange={(e)=>setShowBands(e.target.checked)} />
+                    <input
+                      type="checkbox"
+                      checked={showBands}
+                      onChange={(e)=>setShowBands(e.target.checked)}
+                    />
                     Show background bands
                   </label>
 
                   <label className="mt-2 flex items-center gap-2 text-sm">
-                    <input type="checkbox" checked={showNumeric} onChange={(e)=>setShowNumeric(e.target.checked)} />
+                    <input
+                      type="checkbox"
+                      checked={showNumeric}
+                      onChange={(e)=>setShowNumeric(e.target.checked)}
+                    />
                     Show numeric scores on markers
                   </label>
 
                   <label className="mt-2 flex items-center gap-2 text-sm">
-                    <input type="checkbox" checked={groupByCluster} onChange={(e)=>setGroupByCluster(e.target.checked)} />
+                    <input
+                      type="checkbox"
+                      checked={groupByCluster}
+                      onChange={(e)=>setGroupByCluster(e.target.checked)}
+                    />
                     Group markers by cluster
                   </label>
 
                   <div className="mt-3">
                     <label className="text-sm block mb-1">Band language</label>
-                    <select className="w-full px-3 py-2 rounded-xl border" value={lang} onChange={(e)=>setLang(e.target.value)}>
+                    <select
+                      className="w-full px-3 py-2 rounded-xl border"
+                      value={lang}
+                      onChange={(e)=>setLang(e.target.value)}
+                    >
                       <option value="en">English</option>
                       <option value="es">Español</option>
                       <option value="yue">粵語 (Cantonese)</option>
@@ -372,22 +402,31 @@
                   <div className="grid md:grid-cols-6 gap-3 items-end">
                     <div className="md:col-span-2">
                       <label className="text-sm">Subtest / Composite name</label>
-                      <input className="mt-1 w-full px-3 py-2 rounded-xl border"
-                        value={name} onChange={(e)=>setName(e.target.value)} required
+                      <input
+                        className="mt-1 w-full px-3 py-2 rounded-xl border"
+                        value={name}
+                        onChange={(e)=>setName(e.target.value)}
+                        required
                       />
                     </div>
 
                     <div className="md:col-span-2">
                       <label className="text-sm">Cluster (e.g., WISC-V, Language)</label>
-                      <input className="mt-1 w-full px-3 py-2 rounded-xl border"
-                        value={cluster} onChange={(e)=>setCluster(e.target.value)}
+                      <input
+                        className="mt-1 w-full px-3 py-2 rounded-xl border"
+                        value={cluster}
+                        onChange={(e)=>setCluster(e.target.value)}
                         placeholder="Ungrouped if blank"
                       />
                     </div>
 
                     <div>
                       <label className="text-sm">Score type</label>
-                      <select className="mt-1 w-full px-3 py-2 rounded-xl border" value={type} onChange={(e)=>setType(e.target.value)}>
+                      <select
+                        className="mt-1 w-full px-3 py-2 rounded-xl border"
+                        value={type}
+                        onChange={(e)=>setType(e.target.value)}
+                      >
                         <option value="standard">Standard (mean 100)</option>
                         <option value="t">T (mean 50, SD 10)</option>
                         <option value="scaled">Scaled (mean 10, SD 3)</option>
@@ -397,21 +436,30 @@
 
                     <div>
                       <label className="text-sm">Value</label>
-                      <input type="number" step="any"
+                      <input
+                        type="number"
+                        step="any"
                         className="mt-1 w-full px-3 py-2 rounded-xl border"
-                        value={value} onChange={(e)=>setValue(e.target.value)} required
+                        value={value}
+                        onChange={(e)=>setValue(e.target.value)}
+                        required
                       />
                     </div>
 
                     <div>
                       <label className="text-sm">Marker Color</label>
-                      <select className="mt-1 w-full px-3 py-2 rounded-xl border"
-                        value={markerPreset} onChange={(e)=>setMarkerPreset(e.target.value)}
+                      <select
+                        className="mt-1 w-full px-3 py-2 rounded-xl border"
+                        value={markerPreset}
+                        onChange={(e)=>setMarkerPreset(e.target.value)}
                       >
                         {MARKER_COLOR_PRESETS.map(opt => (
                           <option key={opt.label} value={opt.value}>{opt.label}</option>
                         ))}
                       </select>
+                      <div className="text-xs text-slate-500 mt-1">
+                        Leave on <span className="font-medium">Auto</span> to use the cluster’s default color.
+                      </div>
                     </div>
 
                     <div className="md:col-span-6 flex justify-end">
@@ -420,6 +468,28 @@
                       </button>
                     </div>
                   </div>
+
+                  {displayItems.length > 0 && (
+                    <div className="mt-3 flex flex-wrap gap-2">
+                      {displayItems.map(it => (
+                        <span
+                          key={it.id}
+                          className="px-3 py-1 rounded-full bg-slate-100 border text-sm flex items-center gap-2"
+                        >
+                          <span className="inline-block w-3 h-3 rounded-full" style={{background: it.color}} />
+                          {it.name} — {it.inputValue} {it.inputType} ({it.cluster || "Ungrouped"})
+                          <button
+                            type="button"
+                            onClick={() => removeItem(it.id)}
+                            className="ml-1 text-slate-500 hover:text-red-600"
+                            title="Remove"
+                          >
+                            ×
+                          </button>
+                        </span>
+                      ))}
+                    </div>
+                  )}
                 </form>
               </div>
 
@@ -431,12 +501,20 @@
                       const x2 = Math.min(xMax, Number.isFinite(b.max) ? b.max : xMax);
                       const X = xScale(x1);
                       const W = xScale(x2) - xScale(x1);
+
                       return (
                         <g key={idx}>
                           <rect x={X} y={topPad} width={W} height={innerHeight} fill={b.tint} opacity={0.35} />
-                          <text x={X + W/2} y={topPad - 6} textAnchor="middle" className="fill-slate-600 text-[12px]">
-                            {b.label}
-                          </text>
+                          {labelVisibility(idx) && (
+                            <text
+                              x={X + W/2}
+                              y={topPad - 6}
+                              textAnchor="middle"
+                              className={`fill-slate-600 ${axisSd === 10 ? "text-[10px]" : "text-[12px]"}`}
+                            >
+                              {b.label}
+                            </text>
+                          )}
                         </g>
                       );
                     })}
@@ -474,8 +552,11 @@
                   <div className="mt-8 bg-white rounded-2xl shadow-sm border p-4" id="scoreTable">
                     <div className="flex justify-between items-center mb-3">
                       <h2 className="text-lg font-semibold">Entered Scores</h2>
-                      <button type="button" onClick={()=>window.print()}
-                        className="px-4 py-2 bg-slate-900 text-white rounded-lg hover:bg-slate-800 no-print">
+                      <button
+                        type="button"
+                        onClick={()=>window.print()}
+                        className="px-4 py-2 bg-slate-900 text-white rounded-lg hover:bg-slate-800 no-print"
+                      >
                         Print / Save as PDF
                       </button>
                     </div>
@@ -502,10 +583,15 @@
                             <td className="border p-2">{it.inputValue}</td>
                             <td className="border p-2">{Math.round(it.std100)}</td>
                             <td className="border p-2">{bandFor(it.std100)}</td>
-                            <td className="border p-2"><span className="inline-block w-5 h-5 rounded-md border" style={{background: it.color}}></span></td>
                             <td className="border p-2">
-                              <button type="button" onClick={()=>removeItem(it.id)}
-                                className="px-2 py-1 rounded-md border hover:bg-red-50 hover:text-red-700">
+                              <span className="inline-block w-5 h-5 rounded-md border" style={{background: it.color}}></span>
+                            </td>
+                            <td className="border p-2">
+                              <button
+                                type="button"
+                                onClick={()=>removeItem(it.id)}
+                                className="px-2 py-1 rounded-md border hover:bg-red-50 hover:text-red-700"
+                              >
                                 Remove
                               </button>
                             </td>
@@ -515,8 +601,8 @@
                     </table>
                   </div>
                 )}
-
               </div>
+
             </div>
           </div>
         );
